models/tests/ucl/errors/syntactic/badtypedecl.ucl
// UCLID TEST
// Solver=z3
// Result=None

type a : integer; 